# agent-latch

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INTEGRATIONS.md  PRIVACY.md
installer/: AgentLatch.iss
resources/: app.manifest  resource.h  version.rc  version.rc.in
scripts/: build-installer.ps1  build.ps1  capture-dashboard.ps1  generate-icon.ps1  install-integrations.ps1  install.ps1  package.ps1  uninstall.ps1
src/: agent_detector.cpp  agent_detector.h  app.cpp  app.h  hook_bridge.cpp  hook_bridge.h  ipc.cpp  ipc.h  latch_registry.cpp  latch_registry.h  main.cpp  power_request.cpp  power_request.h  settings.cpp  settings.h  types.cpp  types.h  ui.cpp  ui.h  version.h  win_util.cpp  win_util.h
tests/: install.tests.ps1  installer.tests.ps1  integration-installer.tests.ps1
